syntax = "proto3";

package bonanza.configuration.bonanza_storage_shard;

import "bonanza.build/pkg/proto/configuration/ds/lossymap/lossymap.proto";
import "bonanza.build/pkg/proto/configuration/storage/object/local/local.proto";
import "github.com/buildbarn/bb-storage/pkg/proto/configuration/global/global.proto";
import "github.com/buildbarn/bb-storage/pkg/proto/configuration/grpc/grpc.proto";
import "google/protobuf/duration.proto";

option go_package = "bonanza.build/pkg/proto/configuration/bonanza_storage_shard";

message ApplicationConfiguration {
  // Common configuration options that apply to all Buildbarn binaries.
  buildbarn.configuration.global.Configuration global = 1;

  // gRPC servers to spawn to listen for requests from clients.
  repeated buildbarn.configuration.grpc.ServerConfiguration grpc_servers = 2;

  // Configuration options for writing objects to disk.
  bonanza.configuration.storage.object.local.StoreConfiguration
      local_object_store = 3;

  // Configuration for the tags map. Tags can be used to assign
  // arbitrary identifiers to objects residing in the object store.
  bonanza.configuration.ds.lossymap.HashMapConfiguration tags_map = 4;

  // Configuration for the leases map. The leases map is a data
  // structure that stores leases of all children of objects stored in
  // the current shard. These leases track the completeness of graphs of
  // objects, which is necessary for UploadDag() operations against the
  // storage frontend to run efficiently.
  bonanza.configuration.ds.lossymap.HashMapConfiguration leases_map = 5;

  // The maximum age a lease may have for a parent object using the
  // lease to be considered complete.
  //
  // If a parent object references one or more children for which the
  // lease's age exceeds twice this value, the storage frontend is
  // instructed to renew the leases whose age exceeds this value.
  //
  // More concretely speaking, consider the case in which this option is
  // set to the recommended value of 2 minutes. In this case a parent
  // object is considered to be complete if the leases of all of its
  // children are less than 4 minutes old. If one or more leases are
  // more than 4 minutes old (or missing), the storage frontend has to
  // renew all the leases that are at least 2 minutes old (or
  // missing) to make the parent object complete again.
  //
  // What this means in practice is that for UploadDag() to work
  // reliably (i.e., not reporting graphs as being present while in
  // reality they are not), a storage replica may only be restarted if
  // the other replica is healthy for at least
  // 'height*leases_map_lease_completeness_duration' time, where
  // 'height' refers to the height of the root node of the DAG that is
  // being uploaded.
  //
  // Recommended value: 120s
  google.protobuf.Duration leases_map_lease_completeness_duration = 6;
}
